# otor_vst

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: gui.rs  lib.rs  load_html.rs
src/gui/: join_text.rs
theme/: index.html
theme/css/: main.css
theme/images/: background  ear  knob_background
theme/js/: big-ear.js  initial_settings.js  input_knobs.js  invoke_external_function.js  rotate_knob.js  spin_knob.js
